<resources>

    <string name="app_name">Clothing-App-MAD</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="loginCapslocak">L O G I N</string>
    <string name="password">Password</string>
    <string name="loginAsASeller">Login as a Seller</string>
    <string name="loginAsAUser">Login as a User</string>
    <string name="donthaveanAccount">Don\'t have an account? Sign Up</string>
    <string name="allreadyAmember">Already a member?</string>

    <string name="forgotPassword">Forgot Password</string>


    <string name="allreadyAmembersignIn">Already a member? Sign In</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="createAccount">Create Account</string>
    <string name="joinnow">Join Now</string>

    <string name="resetPassword">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="updateprofile">Update Profile</string>

    <string name="home">Home</string>

    <string name="address1">Address Line 1</string>
    <string name="address2">Address Line 2</string>
    <string name="address3">District</string>


    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="contact">Contact No</string>
    <string name="createpwrd">Create Password</string>
    <string name="confirmpwrd">Confirm Password</string>

    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="becomeAseller">Become a Seller</string>
    <string name="sellerRegister">Seller Registration</string>
    <string name="sellername">Seller/ Company Name</string>
    <string name="sella">Become a Seller</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_bottom_nav">BottomNav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="cart_product_name">Product Name</string>
    <string name="cart_product_qty">Product Quantity</string>
    <string name="cart_product_price">Product Price</string>

    <string name="search_btn">Search</string>
</resources>
