<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent">
    <!--<LinearLayout-->
        <!--android:id="@+id/loginback"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="346dp">-->

        <!--<ImageView-->
            <!--android:id="@+id/imageView2"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_alignStart="@+id/loginback"-->
            <!--android:layout_marginStart="0dp"-->
            <!--app:srcCompat="@drawable/loginback3" />-->

    <!--</LinearLayout>-->

    <LinearLayout
        android:id="@+id/form_layout"
        android:layout_width="match_parent"
        android:layout_height="288dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="347dp"
            android:layout_height="57dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/fredokaoneregular"
            android:text="@string/login"
            android:textColor="@color/GradientBlue"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/fredokaoneregular"
            android:text="@string/email"
            android:textColor="@color/GradientBlue"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:drawableStart="@drawable/email"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="@color/GradientBlue" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/fredokaoneregular"
            android:text="@string/password"
            android:textColor="@color/GradientBlue"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:drawableStart="@drawable/password"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/GradientBlue" />


        <Button
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@color/GradientBlue"
            android:fontFamily="@font/fredokaoneregular"
            android:shadowColor="@color/common_google_signin_btn_text_light_default"
            android:text="@string/loginCapslocak"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="20sp" />

    </LinearLayout>
<LinearLayout
    android:id="@+id/loginas"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/form_layout"
    android:layout_marginLeft="30dp">


    <TextView
        android:id="@+id/login_as_user"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/form_layout"
        android:fontFamily="@font/fredokaoneregular"

        android:text="@string/loginAsAUser"
        android:textColor="@color/GradientBlue"
        android:textSize="18sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/login_as_seller"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/form_layout"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="60dp"
        android:fontFamily="@font/fredokaoneregular"
        android:text="@string/loginAsASeller"
        android:textColor="@color/GradientBlue"
        android:textSize="18sp" />


</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginas"
        android:layout_marginTop="40dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="58dp"
                android:layout_marginLeft="55dp"
                android:fontFamily="@font/fredokaoneregular"
                android:text="@string/donthaveanAccount"
                android:textColor="@color/GradientBlue"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="70dp"
                android:fontFamily="@font/fredokaoneregular"
                android:text="@string/signIn"
                android:textColor="@color/GradientBlue"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
</ScrollView>
</RelativeLayout>