<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    android:weightSum="10"
    tools:context="com.example.clothing_app_mad.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="550dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/joinBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/mainbtn1"
            android:fontFamily="@font/fredokaoneregular"
            android:text="@string/joinnow"
            android:textColor="@color/GradientBlue"
            android:textSize="18sp" />

        <Button
            android:id="@+id/signInbtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/mainbtn2"
            android:fontFamily="@font/fredokaoneregular"
            android:text="@string/allreadyAmembersignIn"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:fontFamily="@font/fredokaoneregular"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            tools:text="@string/becomeAseller" />
    </LinearLayout>
</RelativeLayout>