<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserRegister">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/formback">


            <LinearLayout
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp">


                <Button
                    android:id="@+id/backBtnR"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/backbutton"
                    android:drawableStart="@drawable/backarrow"
                    android:paddingStart="15dp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/registerlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:focusableInTouchMode="true"
                android:layout_below="@id/backBtn">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manjariregular"
                    android:text="@string/sellerRegister"
                    android:textColor="@android:color/background_light"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/fredokaoneregular"
                    android:text="@string/sellername"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/account"
                    android:ems="10"
                    android:fontFamily="@font/fredokaoneregular"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/background_light" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fredokaoneregular"
                    android:text="@string/email"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/email"
                    android:ems="10"
                    android:fontFamily="@font/fredokaoneregular"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/background_light" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fredokaoneregular"
                    android:text="@string/contact"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/contactNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/phone"
                    android:ems="10"
                    android:fontFamily="@font/fredokaoneregular"

                    android:inputType="phone"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    />



                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/registerlayout"
                    android:fontFamily="@font/fredokaoneregular"
                    android:text="@string/address"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/address1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/registerlayout"
                    android:drawableStart="@drawable/location"
                    android:ems="10"
                    android:fontFamily="@font/fredokaoneregular"
                    android:hint="@string/address1"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorText" />

                <EditText
                    android:id="@+id/address2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/registerlayout"
                    android:drawableStart="@drawable/location"
                    android:ems="10"
                    android:fontFamily="@font/fredokaoneregular"
                    android:hint="@string/address2"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorText" />

                <EditText
                    android:id="@+id/address3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/registerlayout"
                    android:drawableStart="@drawable/location"
                    android:ems="10"
                    android:fontFamily="@font/fredokaoneregular"
                    android:hint="@string/address3"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorText" />
                >>>>>>> Stashed changes
                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fredokaoneregular"
                    android:text="@string/createpwrd"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp" />



                <EditText
                    android:id="@+id/crpwrd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/password"
                    android:ems="10"
                    android:fontFamily="@font/fredokaoneregular"
                    android:inputType="textPassword"
                    android:textColor="@android:color/background_light" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fredokaoneregular"
                    android:text="@string/confirmpwrd"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/confpwrd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/password"
                    android:ems="10"
                    android:fontFamily="@font/fredokaoneregular"
                    android:inputType="textPassword"
                    android:textColor="@android:color/background_light" />


                <Button
                    android:id="@+id/singupbtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/GradientBlue"
                    android:fontFamily="@font/fredokaoneregular"
                    android:shadowColor="@android:color/background_light"
                    android:text="@string/signUp"
                    android:textColor="@android:color/background_light"
                    android:textSize="20sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/registerlayout"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">


                <!--

                                    <TextView
                                        android:id="@+id/textView8"
                                        android:layout_width="180dp"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentStart="true"

                                        android:layout_marginStart="70dp"
                                        android:layout_marginLeft="110dp"
                                        android:fontFamily="@font/fredokaoneregular"
                                        android:text="@string/allreadyAmember"
                                        android:textColor="@color/GradientBlue"
                                        android:textSize="18sp" />

                                    <TextView
                                        android:id="@+id/textView9"
                                        android:layout_width="80dp"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentEnd="true"
                                        android:layout_marginRight="90dp"
                                        android:fontFamily="@font/fredokaoneregular"
                                        android:text="@string/signIn"
                                        android:textColor="@color/GradientBlue"
                                        android:textSize="18sp" />
                -->


                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="70dp"
                    android:layout_marginLeft="110dp"
                    android:fontFamily="@font/fredokaoneregular"
                    android:text="@string/allreadyAmember"
                    android:textColor="@color/GradientBlue"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="75dp"
                    android:layout_toEndOf="@+id/textView8"
                    android:fontFamily="@font/fredokaoneregular"
                    android:text="@string/signIn"
                    android:textColor="@color/GradientBlue"
                    android:textSize="18sp" />

            </RelativeLayout>


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>